Update and rename xss.xml to xss.html

--- a/xss.html
+++ b/xss.html
@@ -1,6 +1,8 @@
-<xml>
+<html>
+  <table><xml>
 <value>
 <script>alert(1)</script>
 <value><![CDATA[<script>confirm(document.domain)</script>]]></value>
 </value>
-</xml>
+    </xml></table>
+</html>
